--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>7</version>
     </parent>
 
-    <groupId>com.belerweb</groupId>
+    <groupId>cn.vcinema.tool</groupId>
     <artifactId>pinyin4j</artifactId>
     <version>2.5.1</version>
 
